--- a/app/routes/index.css
+++ b/app/routes/index.css
@@ -46,13 +46,25 @@
   font-weight: 500;
 }
 
+.ri-home__hero-ctas {
+  display: flex;
+  gap: 2ch;
+}
+
+.ri-home__hero-ctas a {
+  border-radius: 3px;
+  background: var(--pink-7);
+  color: var(--violet-1);
+
+  font-weight: 500;
+  font-size: var(--size-4);
+  padding: .5ch .85ch;
+}
+
 .ri-home__hero-logo {
   min-width: 5rem;
   min-width: max(5vw, 7rem);
-}
-
-.ri-home__hero a {
-  font-weight: 500;
+  margin-top: var(--size-4);
 }
 
 .ri-home__logo-list {
