--- a/app/components/button/button.css
+++ b/app/components/button/button.css
@@ -1,6 +1,20 @@
 .ri-button {
+  --button-color: currentColor;
+  --button-bg: var(--gray-2);
+
   padding: var(--size-fluid-1);
 
+  color: var(--button-color);
+  background-color: var(--button-bg);
   border-radius: var(--radius-conditional-2);
   text-transform: uppercase;
+}
+
+.ri-button.-secondary {
+  --button-bg: var(--violet-8);
+}
+
+.ri-button.-error {
+  --button-bg: var(--red-8);
+  --button-color: var(--gray-0);
 }
