--- a/app/styles/typography.css
+++ b/app/styles/typography.css
@@ -4,9 +4,11 @@ h3,
 h4,
 h5 {
   text-transform: uppercase;
+  font-weight: 500;
 }
 
 h1 {
   line-height: 1.1em;
   max-width: 25ch;
+  letter-spacing: -0.4px;
 }
